--- a/desafio/package.json
+++ b/desafio/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "fs": "0.0.1-security",
     "method-override": "^3.0.0",
     "nodemailer": "^6.5.0",
