--- a/desafio/package.json
+++ b/desafio/package.json
@@ -11,17 +11,22 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^6.10.0",
     "fs": "0.0.1-security",
+    "googleapis": "^71.0.0",
     "method-override": "^3.0.0",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "query-string": "^7.0.0",
+    "request": "^2.88.2",
+    "url-parse": "^1.5.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
